--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,5 @@ numpy = "^1.20.3"
 [project.scripts]
 snc = "snc:nc_main"
 rbh = "snc.rbh:rbh_main"
+components = "snc.components:components_main"
+
