--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,9 @@ generate_snc_data = "snc.generate_snc_data:main"
 rbh = "snc.rbh:rbh_main"
 components = "snc.components:components_main"
 
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
