--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.10"
 scipy = "^1.8.0"
 numpy = "^1.20.3"
 biopython = "^1.8"
+tabulate = "^0.9"
 
 [project.scripts]
 snc = "snc:nc_main"
